--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	</div>
 	<footer> <!-- pie de página del sitio -->
 		<p>Hecho por <a href="twitter.com/sergiodxa" title="Mi cuenta de Twitter">@sergiodxa</a> para #mejorandoweb.</p>
+		<p>Repositorio en Github: <a href="http://github.com/sergiodxa/platzi-logo" title="Repo">http://github.com/sergiodxa/platzi-logo</a></p>
 	</footer>
 </body>
 </html>
